# haviliar-IoT

./: .gitignore  .mise.toml  Cargo.toml  Makefile  readme.md  rust-toolchain.toml
.cargo/: config.toml
article/: main.tex  main_rtai_artigo.tex  pesquisas.md  references.md  rtai.bib
article/sty/: packs.sty
factory/: Cargo.toml
factory/src/: display_factory.rs  lib.rs  lora_factory.rs
hal/: Cargo.toml
hal/src/: display.rs  lib.rs  lora.rs  spi_adapter.rs
mqtt_poc/: mqtt.conf  readme.md
src/: lib.rs  main.rs
src/controller/: lora.rs  mod.rs  mqtt.rs
src/factory/: display_factory.rs  lora_factory.rs  mod.rs
src/hal/: display.rs  lora.rs  mod.rs  peripheral_manager.rs  servo_motor.rs  spi_adapter.rs  wifi.rs
src/protocol/: lora.rs  message_type.rs  mod.rs
