[package]
name = "haviliar-iot"
version = "0.1.0"
authors = ["Vinicius-de-Morais <vmorais194@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

#[workspace]
#members = [
#    ".",
#    "hal",
#    "factory"
#]

[[bin]]
name = "haviliar-iot"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "display"
path = "bin/display.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "lora-display"
path = "bin/lora-display.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
#hal = { path = "hal" }
#factory = { path = "factory" }
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = { version = "0.45.2", features = ["alloc"]}
anyhow = "1.0.99"
heapless = "0.9.1"
embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10", features = ["graphics"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
lora-phy = { version = "3.0.1" }
embassy-time = "0.5.0"
alloc = { version = "0.10.5", package = "linked_list_allocator", optional = true }
embassy-sync = "0.7.2"
critical-section = { version = "1.1", features = ["std"], default-features = false }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"


[build]
target = "xtensa-esp32-espidf"

[target.xtensa-esp32-espidf]
linker = "ldproxy"
runner = "espflash flash --monitor"