[package]
name = "haviliar-iot"
version = "0.1.0"
authors = ["Vinicius-de-Morais <vmorais194@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

#[workspace]
#members = [
#    ".",
#    "hal",
#    "factory"
#]

#[[bin]]
#name = "haviliar-iot"
#harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "display"
path = "bin/display.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "lora-display"
path = "bin/lora-display.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

#experimental = ["esp-idf-svc/experimental"]

[dependencies]
#hal = { path = "hal" }
#factory = { path = "factory" }
#esp-hal = { version = "=1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-hal-embassy = {version = "0.9.1", features = ["esp32"]}
#esp-hal-embassy = {version = "0.7.0", features = ["esp32"]}
esp-backtrace = { version = "0.17.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }

# Embassy async runtime
#embassy-executor = { version = "0.7.0", features = ["defmt", "nightly"] }
embassy-executor = { version = "0.7.0", features = [ "nightly", "task-arena-size-16384"] }
embassy-time = { version = "0.5.0" }
#embassy-time = { version = "0.5.0", features = ["generic-queue-64"] }
embassy-sync = { version = "0.7.2" }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }

# Display dependencies
ssd1306 = "0.10.0"
embedded-graphics = "0.8"

# LoRa dependencies
lora-phy = { version = "3.0.1" }

# Embedded HAL async support
embedded-hal-async = "1.0"
embedded-hal = "1.0"

# Utilities
anyhow = { version = "1.0", default-features = false }
heapless = "0.9.1"
linked_list_allocator = "0.10"
log = "0.4"
fugit = "0.3"
static_cell = "2.1.1"
#defmt-test = "0.4.0"
esp-alloc = "0.8.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
critical-section = "1.2.0"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"


[build]
target = "xtensa-esp32-none-elf"

[target.xtensa-esp32-none-elf]
runner = "espflash flash --monitor"

[unstable]
build-std = ["core", "alloc"]
